--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -3,9 +3,15 @@
     Tags:
     <% @article.tags.each do |tag|%>
         <%= link_to tag.name, tag_path(tag)%>
-    <% end %>
-
+    <% end%>
+</p>
 <p><%= @article.body%> </p>
+<p>
+    <%if @article.image.exists?%>
+    <%= image_tag @article.image.url %>
+    <%end%>
+</p>
+</p>    
 <h3> Comments (<%= @article.comments.size %>) </h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
